# TUBITAK-Internship

./: AlgorithmProject1.cpp  README.md  Vector.h  findIntervals.h  findIntervals2.h  lastFINDINTERVALS.h  periodGenerator2.h
ALGO1/: AlgorithmProject1.cpp  AlgorithmProject1.h  ObjectPool.h  Vector.h  algorithms.h
ALGO2/: AlgorithmProject2.cpp  Split.h  Vector.h  findIntervals.h  periodGenerator.h
ALGO2LAST/: AlgorithmProject2.cpp  ErrorCode.h  findIntervals.h  new1.txt  new2.txt  new3.txt  output3.txt  output5.txt  periodGenerator.h
BusScheduling/: CMakeLists.txt
BusScheduling/include/algorithms/: BusScheduling.h  findIntervals.h  periodGenerator.h
BusScheduling/include/util/: ErrorCode.h  Vector.h
BusScheduling/src/: BusScheduling.cpp  output4.txt
CityExplorer/: CMakeLists.txt
CityExplorer/include/algorithm/: Algorithms.h  CityExplorer.h
CityExplorer/include/headers/: ErrorCode.h  Iterator.h  ObjectPool.h  Vector.h
CityExplorer/src/: CityExplorer.cpp  ilmesafe.csv
ExtraFiles/: AlgorithmProject1.h  ErrorCode.h  Iterator.h  Split.h  Vector.h  algorithms.h  findIntervals.h  findIntervals2.h  lastFINDINTERVALS.h  periodGenerator.h  periodGenerator2.h
